FIX: Adjusted app element heights and removed spacing rule set on whole mobile view to get elements sitting correctly in new viewport

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,5 @@ div {
   flex-direction: column;
   position: absolute;
   margin: 0;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
